uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
spec:
  tls:
    - hosts:
        - uptime-kuma.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: uptime-kuma.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
